# rust-ownership

./: Cargo.toml  README.md
docs/: _config.yml  index.md  setup.md
src/: dereferencing_copy_type.rs  dereferencing_non_copy_type.rs  lifetimes_for_references.rs  mutable_reference_scope.rs
