[package]
name = "rust-ownership"
version = "0.1.0"
authors = ["Kevin W Matthews <KevinWMatthews@gmail.com>"]
edition = "2018"

[dependencies]

[[bin]]
name = "dereferencing_copy_type"
path = "src/dereferencing_copy_type.rs"

[[bin]]
name = "dereferencing_non_copy_type"
path = "src/dereferencing_non_copy_type.rs"

[[bin]]
name = "lifetimes_for_references"
path = "src/lifetimes_for_references.rs"
